Made some tweaks to index and main.css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     
     <body>
         <header>
-            <h1>GRATTIS!</h1>
-            <h3>Du har klonat ditt första REPO!</h3>
+            <h3>Du har klonat ditt första REPOSITORY!</h3>
         </header>
-       
+       <section>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ad fuga dignissimos. Ex blanditiis, fugiat consectetur ut molestias eaque voluptas veniam nobis id ea velit reprehenderit obcaecati aspernatur modi. Aliquam.</p>
+       </section>
     </body>
 </html>
